--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,7 +1,16 @@
-//add everything here
+plugins {
+    id 'java-library'
+}
+
+dependencies {
+    implementation 'org.example:utils:1.0-SNAPSHOT'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+}
 
 test {
     useJUnitPlatform()
 }
 
-compileJava {}.dependsOn(':utils:publishToMavenLocal')
+tasks.named('compileJava') {
+    dependsOn ':utils:publishToMavenLocal'
+}
