--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -10,8 +10,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.10' // Apache Commons Lang 3.10
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1' // For tests
+    implementation 'org.apache.commons:commons-lang3:3.10'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 jar {
